--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ header .container {
 
 /* ======== HERO SECTION (Homepage) ======== */
 .hero {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.unsplash.com/photo-1532629345422-7515f3d16bb6?q=80&w=2070') no-repeat center center/cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/hands.png') no-repeat center center/cover;
     height: 60vh;
     display: flex;
     align-items: center;
